--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body, input, textarea {
 
 header {
     padding: 16px 0;
-    background-color: #182c61;
+    background-color: black;
     color: whitesmoke;
 }
 
@@ -69,7 +69,7 @@ section h2 {
 }
 
 section {
-    color: #182c61;
+    color: black;
 }
 
 section p {
@@ -121,22 +121,22 @@ section h3 {
 }
 
 form button {
-    background-color: #182c61;
+    background-color: black;
     color: whitesmoke;
     border: none;
     cursor: pointer;
 }
 
 form button:hover {
-    background-color: #314e9e;
+    background-color: rgba(0, 0, 0, 0.815);
 }
 
 input:focus, textarea:focus {
-    outline-color: #182c61;
+    outline-color: black;
 }
 
 footer {
-    background-color: #182c61;
+    background-color: black;
     color: whitesmoke;
     padding: 16px 0;
 }
